updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>San Pedro Sula, HN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Trading stocks with option contracts and traveling</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Developing a platform to help others learn and support themselves.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Roseville, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To have a steady income to develop my dream job.</p>
     </section>
 
     <footer id="footer">
